--- a/template/index.html
+++ b/template/index.html
@@ -158,6 +158,8 @@
     <div class="chat-container">
         <header class="chat-header">
             <h1>AI Chat Interface <button style="margin-left: 20%;" class="analyze-btn"><a href="\coursepredict.html">Analyze the Counseling</a></button>
+                <button style="margin-left: 20%;" class="analyze-btn"><a href="\interviwer.html">Analyze the Counseling</a></button>
+               
                 <button style="margin-left: 0%;" class="analyze-btn" href="">Analyze Resume</button></h1>
         </header>
         <main class="chat-main" id="lip">
