--- a/template/index.html
+++ b/template/index.html
@@ -157,7 +157,7 @@
 <body>
     <div class="chat-container">
         <header class="chat-header">
-            <h1>AI Chat Interface <button style="margin-left: 20%;" class="analyze-btn"><a href="\coursepredict.html">Analyze the Counseling</a></button>
+            <h1>AI Chat Interface <button style="margin-left: 20%;" class="analyze-btn"><a href="/Ai-counslling/template/coursepredict.html">Analyze the Counseling</a></button>
                 <button style="margin-left: 20%;" class="analyze-btn"><a href="\interviwer.html">Analyze the Counseling</a></button>
                
                 <button style="margin-left: 0%;" class="analyze-btn" href="">Analyze Resume</button></h1>
