--- a/template/index.html
+++ b/template/index.html
@@ -158,9 +158,7 @@
     <div class="chat-container">
         <header class="chat-header">
             <h1>AI Chat Interface <button style="margin-left: 20%;" class="analyze-btn"><a href="/Ai-counslling/template/coursepredict.html">Analyze the Counseling</a></button>
-                <button style="margin-left: 20%;" class="analyze-btn"><a href="\interviwer.html">Analyze the Counseling</a></button>
-               
-                <button style="margin-left: 0%;" class="analyze-btn" href="">Analyze Resume</button></h1>
+               <button style="margin-left: 0%;" class="analyze-btn"><a> href="/Ai-counslling/template/resumer.html">Analyze Resume</button></a></h1>
         </header>
         <main class="chat-main" id="lip">
             <div class="chat-messages" id="chatMessages"></div>
